# ada

./: .gitignore  README.md  pyproject.toml  railpack.json
.github/workflows/: test.yml
alembic/: env.py
bot/: __init__.py  __main__.py  ada.py  app.py  bot.py  cli.py  config.py  loader.py  logging_setup.py  migration.py  permissions.py  settings.py
bot/extensions/: __init__.py  weather_extension.py  welcome_extension.py  wikipedia_extension.py
bot/extensions/core/: ping.py  welcome.py
bot/extensions/fun/: echo.py
bot/extensions/messages/: fields.py  message.py  search_extension.py
bot/extensions/messages/tests/: test_search_extension.py
bot/extensions/moderation/: errors.py  kick_extension.py  kick_service.py  models.py  space_service.py
bot/extensions/moderation/tests/: test_kick_extension.py
bot/extensions/weather/: openweather_service.py  weather_extension.py  weather_helper.py
bot/extensions/weather/tests/: test_weather_extension.py
bot/extensions/welcome/tests/: test_welcome_extension.py
bot/extensions/wikipedia/tests/: test_wikipedia_extension.py
config/: development.yaml  example.bot.yaml  production.yaml
db/migrations/: 20260420133046_create_messages.py
tests/: fake_extension.py  test_config.py  test_loader.py  test_permissions.py  test_settings.py  test_welcome_extension.py
tests/extensions/: test_weather_extension.py  test_welcome_extension.py  test_wikipedia_extension.py
tests/extensions/messages/: test_fields.py
tests/extensions/moderation/: test_kick_extension.py
tests/fake_extensions/: ping.py  pong.py
